crates/normalize/tests/snapshots/cli_snapshots__help_rank_files.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"rank\", \"files\"])"
---
Rank source files by line count, longest first.

Usage: normalize rank files [OPTIONS]

Options:
  -l, --limit <limit>              Maximum number of files to show (0=no limit)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --jsonl                      Output one JSON object per line (for arrays)
      --diff <diff>                Show delta vs this git ref (branch, tag, commit, HEAD~N)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Returns a `FileLengthReport` with file paths and line counts. Supports `exclude`
globs and an optional `diff` ref to show how file lengths have changed.
