crates/normalize/tests/snapshots/cli_snapshots__help_rank_hotspots.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"rank\", \"hotspots\"])"
---
Rank files by churn × complexity: the highest-risk files for introducing bugs.

Usage: normalize rank hotspots [OPTIONS]

Options:
      --pretty                     Human-friendly output with colors and formatting
      --recency                    Weight recent changes higher (exponential decay)
      --compact                    Compact output without colors (overrides TTY detection)
  -r, --root <root>                Root directory (defaults to current directory)
      --jsonl                      Output one JSON object per line (for arrays)
      --repos-dir <repos-dir>      Run across all git repos under DIR
      --json                       Output machine-readable JSON
      --repos-depth <repos-depth>  Max depth to search for repos (default: 1)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Also known as: technical debt hotspots, bug-prone files, high-churn files, risky code.
Combines git churn (commit frequency) with cyclomatic complexity to surface
files that change often and are hard to reason about. Use `recency` to weight
recent commits higher. Returns a `HotspotsReport` with per-file risk scores.

**Score formula (without `--recency`):** `commits × √churn × log₂(1 + max_complexity)`.
High scores indicate complex, bug-prone files that change often.

**Score formula (with `--recency`):** `Σ(e^(-λ·age) × √churn_i) × log₂(1 + max_complexity)`,
where λ = ln(2)/180 (half-life of 180 days). Recent changes are weighted higher.
The `Churn` column is the total lines added + deleted across all commits.
