crates/normalize/tests/snapshots/cli_snapshots__help_rules.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"rules\"])"
---
Configure and run lint rules. Use to enable/disable checks or see what rules are available.

Usage: normalize rules [OPTIONS] [COMMAND]

Commands:
  list           List all rules (syntax + fact, builtin + user)
  run            Run rules against the codebase
  enable         Enable a rule or all rules matching a tag
  disable        Disable a rule or all rules matching a tag
  show           Show full documentation for a rule
  tags           List all tags and the rules they group
  add            Add a rule from a URL
  update         Update imported rules from their sources
  remove         Remove an imported rule
  setup          Interactive setup wizard — run all rules and walk through enable/disable decisions
  validate       Validate the rules configuration — check rule IDs, TOML syntax, and report issues
  compile        Validate and "compile" a Datalog rules file — check syntax and relation names
  test           Test a source file against inline `// error[rule-id]` annotations.
  test-fixtures  Run fixture-based tests for rules.
  help           Print this message or the help of the given subcommand(s)

Options:
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version
