crates/normalize/tests/snapshots/cli_snapshots__help_rules_list.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"rules\", \"list\"])"
---
List all rules (syntax + fact, builtin + user)

Usage: normalize rules list [OPTIONS]

Options:
      --pretty                     Human-friendly output with colors and formatting
  -t, --type <type>                Filter by rule type (all, syntax, fact)
      --compact                    Compact output without colors (overrides TTY detection)
      --tag <tag>                  Filter by tag
      --enabled                    Filter to enabled rules only
      --jsonl                      Output one JSON object per line (for arrays)
      --disabled                   Filter to disabled rules only
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
  -r, --root <root>                Root directory (defaults to current directory)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize rules list                   # all rules with status
normalize rules list --pretty          # with full descriptions
normalize rules list --json            # machine-readable output
