crates/normalize/tests/snapshots/cli_snapshots__help_rules_update.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"rules\", \"update\"])"
---
Update imported rules from their sources

Usage: normalize rules update [OPTIONS] [rule-id]

Arguments:
  [rule-id]  Specific rule ID to update (updates all if omitted)

Options:
      --dry-run                    Dry run - show what would change
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize rules update                   # re-download all imported rules
normalize rules update --dry-run         # preview which rules would update
