crates/normalize/tests/snapshots/cli_snapshots__help_serve_http.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"serve\", \"http\"])"
---
Start HTTP server (REST API)

Usage: normalize serve http [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -p, --port <port>                Port to listen on [default: 8080]
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --openapi                    Output OpenAPI spec and exit (don't start server)
      --jq <jq>                    Filter output through jq expression
  -r, --root <root>                Root directory (defaults to current directory)
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize serve http                 # start HTTP server on default port 8080
normalize serve http -p 3000         # start on a custom port
normalize serve http --openapi       # output OpenAPI spec and exit
