crates/normalize/tests/snapshots/cli_snapshots__help_serve_mcp.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"serve\", \"mcp\"])"
---
Start MCP server for LLM integration (stdio transport)

Usage: normalize serve mcp [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --pretty                     Human-friendly output with colors and formatting
  -r, --root <root>                Root directory (defaults to current directory)
      --compact                    Compact output without colors (overrides TTY detection)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Examples:
normalize serve mcp                  # start MCP server on stdio
